@@ -14,6 +14,7 @@ export(ssh_info)
 export(ssh_key_info)
 export(ssh_keygen)
 export(ssh_read_key)
+export(ssh_session_info)
 export(ssh_tunnel)
 importFrom(askpass,askpass)
 importFrom(credentials,ssh_agent_add)
