@@ -3,6 +3,7 @@
   - Fix a bug with reading the new openssh pem keys
   - Disconnect session immediately on startup/authentication errors
   - Raise a warning when the GC collects an ssh session which is still connected.
+  - Rename ssh_info() to ssh_session_info()
 
 0.4:
   - Fix for security problem with latest openssh-server
